force-app/main/default/objects/Loop__LoopSettings__c/fields/Loop__Job_Queue_Status_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Loop__Job_Queue_Status_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Queue Status Enabled</label>
    <type>Checkbox</type>
</CustomField>