force-app/main/default/objects/Loop__LoopSettings__c/fields/Loop__Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Loop__Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce Sandbox (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>