force-app/main/default/objects/Loop__LoopSettings__c/fields/Loop__Store_Attachments_As_Salesforce_Files__c.field-meta.xml
<CustomField>
    <fullName>Loop__Store_Attachments_As_Salesforce_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Attachments As Salesforce Files</label>
    <type>Checkbox</type>
</CustomField>